# data-science-team

./: README.md  app.py  car_details_loaded.json  generate_car_cleaning.py  generate_car_visualizations.py  main.py  memory.db  pyproject.toml  regression_pipeline.py
